adding div and span tag

--- a/chickens.html
+++ b/chickens.html
@@ -11,8 +11,10 @@
         <h1>Chickens</h1>
         <img src="chicken.jpg" alt="Chicken" width="150px" title="CHICKEN">
     </a>
-    <a href="about.html">About Me</a>
-
+    <div>
+        <a href="https://www.google.com/">I am a link to <span>Google</span></a> |
+        <a href="about.html">About Me</a>
+    </div>
     <p>
         <b>The chicken (Gallus gallus domesticus)</b> is a domesticated subspecies of the red junglefowl (Gallus
         gallus), originally native to Southeast Asia. It was first domesticated around 8,000 years ago and is one of the
