--- a/chickens.html
+++ b/chickens.html
@@ -12,7 +12,7 @@
         <img src="chicken.jpg" alt="Chicken" width="150px" title="CHICKEN">
     </a>
     <div>
-        <a href="https://www.google.com/">I am a link to <span>Google</span></a> |
+        <a href="https://www.google.com/">I am a link to <span>Google</span></a>
         <a href="about.html">About Me</a>
     </div>
     <p>
