learning sup and sub tag

--- a/chickens.html
+++ b/chickens.html
@@ -5,10 +5,10 @@
     <title>Chickens !!!!</title>
 </head>
 
-
 <body>
     <a href="https://en.wikipedia.org/wiki/Chicken">
         <h1>Chickens</h1>
+        <hr>
         <img src="chicken.jpg" alt="Chicken" width="150px" title="CHICKEN">
     </a>
     <div>
@@ -19,7 +19,7 @@
         <b>The chicken (Gallus gallus domesticus)</b> is a domesticated subspecies of the red junglefowl (Gallus
         gallus), originally native to Southeast Asia. It was first domesticated around 8,000 years ago and is one of the
         most common and widespread domesticated animals in the world. Chickens are primarily kept for their meat and
-        eggs, though they are also kept as pets.[1]
+        eggs, though they are also kept as pets.<sup>[1]</sup>
     </p>
     <p>
         As of 2023, the global chicken population exceeds 26.5 billion, with more than 50 billion birds produced
@@ -31,18 +31,19 @@
     <h2>Nomenclature</h2>
     <p>Terms for chickens include:
     <ul>
-        <li>Biddy: a chicken, or a newly hatched chicken[2][3]</li>
-        <li>Capon: a castrated or neutered male chicken[a]</li>
-        <li>Chick: a young chicken[4]</li>
-        <li>Chook /tʃʊk/: a chicken (Australia/New Zealand, informal)[5]</li>
-        <li>Cock: a fertile adult male chicken[6][7]</li>
-        <li>Cockerel: a young male chicken[8]</li>
-        <li>Hen: an adult female chicken[9]</li>
-        <li>Pullet: a young female chicken less than a year old.[10] In the poultry industry, a pullet is a sexually
-            immature chicken less than 22 weeks of age.[11]</li>
+        <li>Biddy: a chicken, or a newly hatched chicken<sup>[2][3]</sup></li>
+        <li>Capon: a castrated or neutered male chicken<sup>[a]</sup></li>
+        <li>Chick: a young chicken<sup></sup>[4]</sup></li>
+        <li>Chook /tʃʊk/: a chicken (Australia/New Zealand, informal)<sup>[5]</sup></li>
+        <li>Cock: a fertile adult male chicken<sup>[6][7]</sup></li>
+        <li>Cockerel: a young male chicken<sup>[8]</sup></li>
+        <li>Hen: an adult female chicken<sup>[9]</sup></li>
+        <li>Pullet: a young female chicken less than a year old.<sup>[10]</sup> In the poultry industry, a pullet is a
+            sexually
+            immature chicken less than 22 weeks of age.<sup>[11]</sup></li>
         <li>Rooster: a fertile adult male chicken, especially in North America. Originated in the 18th century, possibly
-            as a euphemism to avoid the sexual connotation of the word cock.[12][13][14]</li>
-        <li>Yardbird: a chicken (southern United States, dialectal)[15]</li>
+            as a euphemism to avoid the sexual connotation of the word cock.<sup>[12][13][14]</sup></li>
+        <li>Yardbird: a chicken (southern United States, dialectal)<sup>[15]</sup></li>
     </ul>
     </p>
     <h2>Breeds of Chicken</h2>
