--- a/chickens.html
+++ b/chickens.html
@@ -6,64 +6,71 @@
 </head>
 
 <body>
-    <a href="https://en.wikipedia.org/wiki/Chicken">
-        <h1>Chickens</h1>
-        <hr>
-        <img src="chicken.jpg" alt="Chicken" width="150px" title="CHICKEN">
-    </a>
-    <div>
-        <a href="https://www.google.com/">I am a link to <span>Google</span></a>
-        <a href="about.html">About Me</a>
-    </div>
-    <p>
-        <b>The chicken (Gallus gallus domesticus)</b> is a domesticated subspecies of the red junglefowl (Gallus
-        gallus), originally native to Southeast Asia. It was first domesticated around 8,000 years ago and is one of the
-        most common and widespread domesticated animals in the world. Chickens are primarily kept for their meat and
-        eggs, though they are also kept as pets.<sup>[1]</sup>
-    </p>
-    <p>
-        As of 2023, the global chicken population exceeds 26.5 billion, with more than 50 billion birds produced
-        annually for consumption. Specialized breeds such as broilers and laying hens have been developed for meat and
-        egg production, respectively. A hen bred for laying can produce over 300 eggs per year. Chickens are social
-        animals with complex vocalizations and behaviors, and feature in folklore, religion, and literature across many
-        societies. Their economic importance makes them a central component of global animal husbandry.
-    </p>
-    <h2>Nomenclature</h2>
-    <p>Terms for chickens include:
-    <ul>
-        <li>Biddy: a chicken, or a newly hatched chicken<sup>[2][3]</sup></li>
-        <li>Capon: a castrated or neutered male chicken<sup>[a]</sup></li>
-        <li>Chick: a young chicken<sup></sup>[4]</sup></li>
-        <li>Chook /tʃʊk/: a chicken (Australia/New Zealand, informal)<sup>[5]</sup></li>
-        <li>Cock: a fertile adult male chicken<sup>[6][7]</sup></li>
-        <li>Cockerel: a young male chicken<sup>[8]</sup></li>
-        <li>Hen: an adult female chicken<sup>[9]</sup></li>
-        <li>Pullet: a young female chicken less than a year old.<sup>[10]</sup> In the poultry industry, a pullet is a
-            sexually
-            immature chicken less than 22 weeks of age.<sup>[11]</sup></li>
-        <li>Rooster: a fertile adult male chicken, especially in North America. Originated in the 18th century, possibly
-            as a euphemism to avoid the sexual connotation of the word cock.<sup>[12][13][14]</sup></li>
-        <li>Yardbird: a chicken (southern United States, dialectal)<sup>[15]</sup></li>
-    </ul>
-    </p>
-    <h2>Breeds of Chicken</h2>
-    <ol>
-        <li>Bantam</li>
+    <main>
+        <a href="https://en.wikipedia.org/wiki/Chicken">
+            <h1>Chickens</h1>
+            <hr>
+            <img src="chicken.jpg" alt="Chicken" width="150px" title="CHICKEN">
+        </a>
+        <div>
+            <a href="https://www.google.com/">I am a link to <span>Google</span></a>
+            <a href="about.html">About Me</a>
+        </div>
+        <p>
+            <b>The chicken (Gallus gallus domesticus)</b> is a domesticated subspecies of the red junglefowl (Gallus
+            gallus), originally native to Southeast Asia. It was first domesticated around 8,000 years ago and is one of
+            the
+            most common and widespread domesticated animals in the world. Chickens are primarily kept for their meat and
+            eggs, though they are also kept as pets.<sup>[1]</sup>
+        </p>
+        <p>
+            As of 2023, the global chicken population exceeds 26.5 billion, with more than 50 billion birds produced
+            annually for consumption. Specialized breeds such as broilers and laying hens have been developed for meat
+            and
+            egg production, respectively. A hen bred for laying can produce over 300 eggs per year. Chickens are social
+            animals with complex vocalizations and behaviors, and feature in folklore, religion, and literature across
+            many
+            societies. Their economic importance makes them a central component of global animal husbandry.
+        </p>
+        <h2>Nomenclature</h2>
+        <p>Terms for chickens include:
         <ul>
-            <li>Leghorn</li>
-            <li>Rhode Island Red</li>
+            <li>Biddy: a chicken, or a newly hatched chicken<sup>[2][3]</sup></li>
+            <li>Capon: a castrated or neutered male chicken<sup>[a]</sup></li>
+            <li>Chick: a young chicken<sup></sup>[4]</sup></li>
+            <li>Chook /tʃʊk/: a chicken (Australia/New Zealand, informal)<sup>[5]</sup></li>
+            <li>Cock: a fertile adult male chicken<sup>[6][7]</sup></li>
+            <li>Cockerel: a young male chicken<sup>[8]</sup></li>
+            <li>Hen: an adult female chicken<sup>[9]</sup></li>
+            <li>Pullet: a young female chicken less than a year old.<sup>[10]</sup> In the poultry industry, a pullet is
+                a
+                sexually
+                immature chicken less than 22 weeks of age.<sup>[11]</sup></li>
+            <li>Rooster: a fertile adult male chicken, especially in North America. Originated in the 18th century,
+                possibly
+                as a euphemism to avoid the sexual connotation of the word cock.<sup>[12][13][14]</sup></li>
+            <li>Yardbird: a chicken (southern United States, dialectal)<sup>[15]</sup></li>
         </ul>
+        </p>
+        <h2>Breeds of Chicken</h2>
+        <ol>
+            <li>Bantam</li>
+            <ul>
+                <li>Leghorn</li>
+                <li>Rhode Island Red</li>
+            </ul>
 
-        <li>Standard</li>
-        <ul>
-            <li>White Rock</li>
-            <li>Broiler</li>
-            <li>Laying Hen</li>
-        </ul>
-    </ol>
-    <h2>BABY CHICKEN</h2>
-    <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Newly-hatched_chickens.jpg/500px-Newly-hatched_chickens.jpg">
+            <li>Standard</li>
+            <ul>
+                <li>White Rock</li>
+                <li>Broiler</li>
+                <li>Laying Hen</li>
+            </ul>
+        </ol>
+        <h2>BABY CHICKEN</h2>
+        <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Newly-hatched_chickens.jpg/500px-Newly-hatched_chickens.jpg">
+    </main>
 </body>
 
 </html>
