--- a/chickens.html
+++ b/chickens.html
@@ -4,6 +4,13 @@
 <head>
     <title>Chickens !!!!</title>
 </head>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
 
 <body>
     <main>
