--- a/chickens.html
+++ b/chickens.html
@@ -39,26 +39,29 @@
             many
             societies. Their economic importance makes them a central component of global animal husbandry.
         </p>
-        <h2>Nomenclature</h2>
-        <p>Terms for chickens include:
-        <ul>
-            <li>Biddy: a chicken, or a newly hatched chicken<sup>[2][3]</sup></li>
-            <li>Capon: a castrated or neutered male chicken<sup>[a]</sup></li>
-            <li>Chick: a young chicken<sup></sup>[4]</sup></li>
-            <li>Chook /tʃʊk/: a chicken (Australia/New Zealand, informal)<sup>[5]</sup></li>
-            <li>Cock: a fertile adult male chicken<sup>[6][7]</sup></li>
-            <li>Cockerel: a young male chicken<sup>[8]</sup></li>
-            <li>Hen: an adult female chicken<sup>[9]</sup></li>
-            <li>Pullet: a young female chicken less than a year old.<sup>[10]</sup> In the poultry industry, a pullet is
-                a
-                sexually
-                immature chicken less than 22 weeks of age.<sup>[11]</sup></li>
-            <li>Rooster: a fertile adult male chicken, especially in North America. Originated in the 18th century,
-                possibly
-                as a euphemism to avoid the sexual connotation of the word cock.<sup>[12][13][14]</sup></li>
-            <li>Yardbird: a chicken (southern United States, dialectal)<sup>[15]</sup></li>
-        </ul>
-        </p>
+        <section>
+            <h2>Nomenclature</h2>
+            <p>Terms for chickens include:
+            <ul>
+                <li>Biddy: a chicken, or a newly hatched chicken<sup>[2][3]</sup></li>
+                <li>Capon: a castrated or neutered male chicken<sup>[a]</sup></li>
+                <li>Chick: a young chicken<sup></sup>[4]</sup></li>
+                <li>Chook /tʃʊk/: a chicken (Australia/New Zealand, informal)<sup>[5]</sup></li>
+                <li>Cock: a fertile adult male chicken<sup>[6][7]</sup></li>
+                <li>Cockerel: a young male chicken<sup>[8]</sup></li>
+                <li>Hen: an adult female chicken<sup>[9]</sup></li>
+                <li>Pullet: a young female chicken less than a year old.<sup>[10]</sup> In the poultry industry, a
+                    pullet is
+                    a
+                    sexually
+                    immature chicken less than 22 weeks of age.<sup>[11]</sup></li>
+                <li>Rooster: a fertile adult male chicken, especially in North America. Originated in the 18th century,
+                    possibly
+                    as a euphemism to avoid the sexual connotation of the word cock.<sup>[12][13][14]</sup></li>
+                <li>Yardbird: a chicken (southern United States, dialectal)<sup>[15]</sup></li>
+            </ul>
+            </p>
+        </section>
         <h2>Breeds of Chicken</h2>
         <ol>
             <li>Bantam</li>
