--- a/about.html
+++ b/about.html
@@ -12,5 +12,14 @@
     <p>I am a HUMAN BEING</p>
     <a href="chickens.html">Go to Chickens Page</a>
 </body>
+<article>
+    <h2>Learning HTML</h2>
+    <p>HTML is the foundation of web development.</p>
+
+    <aside>
+        <p><strong>Tip:</strong> Practice HTML daily for faster learning.</p>
+    </aside>
+</article>
+
 
 </html>
