--- a/chickens.html
+++ b/chickens.html
@@ -81,6 +81,13 @@
         <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Newly-hatched_chickens.jpg/500px-Newly-hatched_chickens.jpg">
     </main>
+    <footer>
+        <p>This is my website</p>
+        <ul>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="help.html">Help</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
