--- a/chickens.html
+++ b/chickens.html
@@ -78,8 +78,8 @@
             </ul>
         </ol>
         <h2>BABY CHICKEN</h2>
-        <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Newly-hatched_chickens.jpg/500px-Newly-hatched_chickens.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Newly-hatched_chickens.jpg/500px-Newly-hatched_chickens.jpg"
+            width="150px">
     </main>
     <footer>
         <p>This is my website</p>
