--- a/heaviest_birds.html
+++ b/heaviest_birds.html
@@ -19,25 +19,27 @@
                 <th>Can Fly?</th>
             </tr>
         </thead>
-        <tr>
-            <td>Ostrich</td>
-            <td>104 kg (229 lbs)</td>
-            <td>156 kg (344 lbs)</td>
-            <td>No</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Ostrich</td>
+                <td>104 kg (229 lbs)</td>
+                <td>156 kg (344 lbs)</td>
+                <td>No</td>
+            </tr>
 
-        <tr>
-            <td>Somali Ostrich</td>
-            <td>90 kg (198 lbs)</td>
-            <td>145 kg (320 lbs)</td>
-            <td>No</td>
-        </tr>
-        <tr>
-            <td>Wild Turkey</td>
-            <td>13.5 kg (29.7 lbs)</td>
-            <td>39 kg (86 lbs)</td>
-            <td>Yes</td>
-        </tr>
+            <tr>
+                <td>Somali Ostrich</td>
+                <td>90 kg (198 lbs)</td>
+                <td>145 kg (320 lbs)</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td>Wild Turkey</td>
+                <td>13.5 kg (29.7 lbs)</td>
+                <td>39 kg (86 lbs)</td>
+                <td>Yes</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 
