rowspan and colspan

--- a/heaviest_birds.html
+++ b/heaviest_birds.html
@@ -41,6 +41,42 @@
             </tr>
         </tbody>
     </table>
+
+    <h2>New Table</h2>
+    <table border="5">
+        <thead>
+            <tr>
+                <th rowspan="2">Animal</th>
+                <th colspan="2">Average Weight</th>
+                <th rowspan="2">Can Fly?</th>
+            </tr>
+            <tr>
+                <th>kg</th>
+                <th>lbs</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Ostrich</td>
+                <td>104 kg </td>
+                <td>229 lbs</td>
+                <td>No</td>
+            </tr>
+
+            <tr>
+                <td>Somali Ostrich</td>
+                <td>90 kg </td>
+                <td>198 lbs</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td>Wild Turkey</td>
+                <td>13.5 kg </td>
+                <td>29.7 lbs</td>
+                <td>Yes</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
