--- a/forms.html
+++ b/forms.html
@@ -9,17 +9,17 @@
 
 <body>
     <h1>This is the Forms page.</h1>
-    <form action="/submit" method="post">
+    <form>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <br><br>
-        <input type="submit" value="Submit">
-        <br><br>
         <label for="number">Number:</label>
         <input type="number" id="number" name="number" required>
+        <br><br>
+
     </form>
 </body>
 
