learning about forms

--- a/forms.html
+++ b/forms.html
@@ -11,7 +11,7 @@
     <h1>This is the Forms page.</h1>
     <form>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required placeholder="Username">
         <br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
