--- a/forms.html
+++ b/forms.html
@@ -14,10 +14,10 @@
         <input type="text" id="username" name="username" required placeholder="Username">
         <br><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required placeholder="password">
         <br><br>
         <label for="number">Number:</label>
-        <input type="number" id="number" name="number" required>
+        <input type="number" id="number" name="number" required placeholder="number">
         <br><br>
 
     </form>
