--- a/forms.html
+++ b/forms.html
@@ -11,13 +11,13 @@
     <h1>This is the Forms page.</h1>
     <form>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required placeholder="Username">
+        <input type="text" id="username" name="username" required placeholder="Username" name="username">
         <br><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required placeholder="password">
+        <input type="password" id="password" name="password" required placeholder="password" name="password">
         <br><br>
         <label for="number">Number:</label>
-        <input type="number" id="number" name="number" required placeholder="number">
+        <input type="number" id="number" name="number" required placeholder="number" name="number">
         <br><br>
 
     </form>
