--- a/forms.html
+++ b/forms.html
@@ -21,6 +21,25 @@
         <br><br>
         <button type="submit">Submit</button>
     </form>
+   <hr>
+        <h2>Hijacking Searches</h2>
+        <h3>Search in google</h3>
+        <from action="https://www.google.com/search" method="GET">
+            <input type="text" name="q" placeholder="Search Google">
+            <button type="submit">Search</button>
+            </form>
+
+            <h3>Search in reddit</h3>
+            <form action="https://www.reddit.com/search" method="GET">
+                <input type="text" name="q" placeholder="Search Reddit">
+                <button type="submit">Search</button>
+            </form>
+
+             <h3>Search in youtube</h3>
+            <form action="https://www.youtube.com/results" method="GET">
+                <input type="text" name="search_query" placeholder="Search YouTube">
+                <button type="submit">Search</button>
+            </form>
 </body>
 
 </html>
