--- a/forms.html
+++ b/forms.html
@@ -41,7 +41,14 @@
                 <button type="submit">Search</button>
             </form>
             <hr>
-            
+            <h3>More Inputs in Form</h3>
+            <form action="">
+                <input type="checkbox" id="agree" name="agree_to">
+                <label for="agree">I agree to the terms and conditions</label>
+                <button type="submit">Submit</button>
+            </form>
+        </form>
+    </form>
 </body>
 
 </html>
