--- a/forms.html
+++ b/forms.html
@@ -42,11 +42,14 @@
             </form>
             <hr>
             <h3>More Inputs in Form</h3>
+            <h4>Checkbox Input</h4>
             <form action="">
                 <input type="checkbox" id="agree" name="agree_to">
                 <label for="agree">I agree to the terms and conditions</label>
                 <button type="submit">Submit</button>
             </form>
+            <h4>Radio Input</h4>
+            <form action="">
         </form>
     </form>
 </body>
