--- a/forms.html
+++ b/forms.html
@@ -50,6 +50,11 @@
             </form>
             <h4>Radio Input</h4>
             <form action="">
+                <input type="radio" id="option1" name="options" value="option1">
+                <label for="option1">Option 1</label><br>
+                <input type="radio" id="option2" name="options" value="option2">
+                <label for="option2">Option 2</label><br>
+                <button type="submit">Submit</button>
         </form>
     </form>
 </body>
