--- a/forms.html
+++ b/forms.html
@@ -54,7 +54,8 @@
                 <label for="option1">Yes</label><br>
                 <input type="radio" id="option2" name="options" value="option2">
                 <label for="option2">No</label><br>
-        </form>
+                <button type="submit">Submit</button>
+            </form>
     </form>
 </body>
 
