--- a/forms.html
+++ b/forms.html
@@ -56,6 +56,15 @@
                 <label for="option2">No</label><br>
                 <button type="submit">Submit</button>
             </form>
+            <h4>Dropdown Select</h4>
+            <form action="">
+                <label for="meals">Choose an option for Entree</label>
+                <select id="meals" name="meals">
+                    <option value="option1">Veg</option>
+                    <option value="option2">Non-Veg</option>
+                    <option value="option3">Vegan</option>
+                </select>
+                <button type="submit">Submit</button>
     </form>
 </body>
 
