--- a/forms.html
+++ b/forms.html
@@ -65,6 +65,7 @@
                     <option value="option3">Vegan</option>
                 </select>
                 <button type="submit">Submit</button>
+                </form>
     </form>
 </body>
 
