--- a/forms.html
+++ b/forms.html
@@ -66,6 +66,12 @@
                 </select>
                 <button type="submit">Submit</button>
             </form>
+             <h4>Range Input</h4>
+            <form action="">
+                <label for="range">Choose a number between 1 and 10:</label>
+                <input type="range" id="range" name="range" min="1" max="10">
+                <button type="submit">Submit</button>
+            </form>
 
     </form>
 </body>
