--- a/forms.html
+++ b/forms.html
@@ -69,7 +69,7 @@
              <h4>Range Input</h4>
             <form action="">
                 <label for="range">Choose a number between 1 and 10:</label>
-                <input type="range" id="range" name="range" min="1" max="10">
+                <input type="range" id="range" name="range" min="1" max="10" name="range">
                 <button type="submit">Submit</button>
             </form>
 
