--- a/forms.html
+++ b/forms.html
@@ -73,6 +73,13 @@
                 <button type="submit">Submit</button>
             </form>
 
+            <h4>Textarea Input</h4>
+            <form action="">
+                <label for="comments">Any message??</label><br>
+                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Enter your message here..."></textarea><br>
+                <button type="submit">Submit</button>
+            </form>
+
     </form>
 </body>
 
