--- a/forms.html
+++ b/forms.html
@@ -80,6 +80,13 @@
             placeholder="Enter your message here..."></textarea><br>
         <button type="submit">Submit</button>
     </form>
+    <hr>
+    <h3>Validation in Html</h3>
+    <form action="">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+        <button type="submit">Submit</button>
+    </form>
 
 
 </body>
