video compilation page using <iframe>

--- a/freecodecamp/videocompilationpage.html
+++ b/freecodecamp/videocompilationpage.html
@@ -2,13 +2,54 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>Video Compilation Page</title>
 </head>
 
 <body>
-
+    <main>
+        <h1>Video Compilation Page</h1>
+        <p>Welcome to our Video Compilation Page, where you can explore a curated collection of informative and engaging
+            videos. This page brings together content designed to help you learn, discover, and enjoy topics presented
+            in a clear and visual format.</p>
+        <section>
+            <h2>Villarreal CF vs Real Madrid</h2>
+            <p>Villarreal CF vs Real Madrid is a Spanish football fixture between two top-flight La Liga clubs. Real
+                Madrid, one of the most successful teams in world football, often enters as the favorite, while
+                Villarreal — nicknamed “The Yellow Submarine” — is known for its competitive spirit and ability to
+                challenge big teams. Historically, Real Madrid have a strong head-to-head record against Villarreal, but
+                their matches frequently deliver intense, exciting football and are important in the fight for league
+                positions</p>
+            <iframe src="https://www.youtube.com/embed/sagRevXDqxo" title="Villarreal CF vs Real Madrid" height="315"
+                width="450">
+            </iframe>
+        </section>
+        <section>
+            <h2>Bournemouth vs Liverpool</h2>
+            <p>Bournemouth vs Liverpool is an English Premier League fixture between AFC Bournemouth and Liverpool FC.
+                Liverpool — one of England’s most successful clubs — typically enters as the stronger side historically,
+                while Bournemouth often plays the role of underdog. Their meetings have delivered a range of results,
+                from dramatic wins to high-scoring contests, showcasing competitive top-flight English football. In
+                their recent encounter, Bournemouth shocked Liverpool with a dramatic 3-2 victory capped by a
+                stoppage-time winner, underlining the unpredictable and exciting nature of Premier League matches.</p>
+            <iframe src="https://www.youtube.com/embed/crwml4joBKk" title="Bournemouth vs Liverpool" height="315"
+                width="450">
+            </iframe>
+        </section>
+        <section>
+            <h2>Bayern Munich vs FC Augsburg</h2>
+            <p>Bayern Munich vs FC Augsburg is a Bundesliga clash between German giants Bayern Munich and regional
+                rivals FC Augsburg. Bayern, historically one of Germany’s most dominant teams with a strong winning
+                record in this fixture, typically enter as favorites, while Augsburg often play with determination as
+                the underdog. Recent meetings have seen a mix of exciting matches — from narrow Bayern wins to
+                surprising upsets such as Augsburg’s 2-1 comeback victory that snapped Bayern’s long unbeaten run in
+                January 2026 — making this matchup a fascinating test of skill, strategy and resilience in Germany’s top
+                flight.</p>
+            <iframe src="https://www.youtube.com/embed/AkdfPDVZrEo" title="Bayern Munich vs FC Augsburg" height="315"
+                width="450">
+            </iframe>
+        </section>
+    </main>
 </body>
 
 </html>
