--- a/udemy practice/test7.html
+++ b/udemy practice/test7.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Hey!</title>
-    <link rel="stylesheet" href="C:\Users\91919\OneDrive\Desktop\html-css\udemy practice\css\test7.css">
+    <link rel="stylesheet" href="css/test7.css">
 </head>
 
 <body>
