--- a/udemy practice/test7.html
+++ b/udemy practice/test7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hey!</title>
+    <title>Test7</title>
     <link rel="stylesheet" href="css/test7.css">
 </head>
 
