--- a/udemy practice/test9.html
+++ b/udemy practice/test9.html
@@ -13,7 +13,7 @@
     <ul>
         <li class="done">Walk Chickens</li>
         <li>Clean Out Coop</li>
-        <li class="done">Collect Chicken Eggs</li>
+        <li class="done"><a href="#">Collect Chicken Eggs</a></li>
         <li>Incubate Chicken Eggs</li>
         <li>Hatch New Chickens!</li>
     </ul>
