--- a/freecodecamp/Survey.html
+++ b/freecodecamp/Survey.html
@@ -12,7 +12,9 @@
 <body>
 
     <!-- Page Title -->
-    <h1 id="title">Developer Feedback Survey</h1>
+    <div>
+        <h1 id="title">Developer Feedback Survey</h1>
+    </div>
 
     <!-- Description -->
     <p id="description">
