--- a/freecodecamp/Survey.html
+++ b/freecodecamp/Survey.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Page Title -->
-    <div>
+    <div class="header">
         <h1 id="title">Developer Feedback Survey</h1>
     </div>
 
