--- a/freecodecamp/Survey.html
+++ b/freecodecamp/Survey.html
@@ -23,28 +23,29 @@
 
     <!-- Form -->
     <form id="survey-form">
+        <div class="info">
+            <!-- Name -->
+            <label id="name-label" for="name">Name</label><br>
+            <input type="text" id="name" name="name" placeholder="Enter your full name" required /><br><br>
 
-        <!-- Name -->
-        <label id="name-label" for="name">Name</label><br>
-        <input type="text" id="name" name="name" placeholder="Enter your full name" required /><br><br>
+            <!-- Email -->
+            <label id="email-label" for="email">Email</label><br>
+            <input type="email" id="email" name="email" placeholder="Enter your email address" required /><br><br>
 
-        <!-- Email -->
-        <label id="email-label" for="email">Email</label><br>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" required /><br><br>
+            <!-- Number -->
+            <label id="number-label" for="number">Experience (years)</label><br>
+            <input type="number" id="number" name="experience" min="0" max="40"
+                placeholder="Years of experience" /><br><br>
 
-        <!-- Number -->
-        <label id="number-label" for="number">Experience (years)</label><br>
-        <input type="number" id="number" name="experience" min="0" max="40" placeholder="Years of experience" /><br><br>
-
-        <!-- Dropdown -->
-        <label for="dropdown">Primary Role</label><br>
-        <select id="dropdown" name="role">
-            <option value="">Select your role</option>
-            <option value="student">Student</option>
-            <option value="developer">Developer</option>
-            <option value="designer">Designer</option>
-        </select><br><br>
-
+            <!-- Dropdown -->
+            <label for="dropdown">Primary Role</label><br>
+            <select id="dropdown" name="role">
+                <option value="">Select your role</option>
+                <option value="student">Student</option>
+                <option value="developer">Developer</option>
+                <option value="designer">Designer</option>
+            </select><br><br>
+        </div>
         <!-- Radio Buttons -->
         <p>Would you recommend learning web development?</p>
 
