--- a/freecodecamp/Survey.html
+++ b/freecodecamp/Survey.html
@@ -47,7 +47,7 @@
             </select><br><br>
         </div>
         <!-- Radio Buttons -->
-        <p>Would you recommend learning web development?</p>
+        <p class="learn">Would you recommend learning web development?</p>
 
         <input type="radio" name="recommend" value="yes" id="yes">
         <label for="yes">Yes</label><br>
@@ -56,7 +56,7 @@
         <label for="no">No</label><br><br>
 
         <!-- Checkboxes -->
-        <p>What technologies are you learning?</p>
+        <p class="learn">What technologies are you learning?</p>
 
         <input type="checkbox" name="tech" value="html" id="html">
         <label for="html">HTML</label><br>
