--- a/udemy practice/test11.html
+++ b/udemy practice/test11.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test11</title>
+    <link rel="stylesheet" href="test11.css">
 </head>
 
 <body>
