--- a/freecodecamp/Survey.html
+++ b/freecodecamp/Survey.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body background="C:\Users\91919\OneDrive\Desktop\html-css\frontend-mini-projects\landing-page\images\laptop.jpg">
 
     <!-- Page Title -->
     <div class="header">
