--- a/freecodecamp/Survey.html
+++ b/freecodecamp/Survey.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body class="background">
+<body>
 
     <!-- Page Title -->
     <div class="header">
@@ -45,6 +45,10 @@
                 <option value="developer">Developer</option>
                 <option value="designer">Designer</option>
             </select><br><br>
+
+            <div class="img">
+            </div>
+
         </div>
         <!-- Radio Buttons -->
         <p class="learn">Would you recommend learning web development?</p>
