--- a/photosite.html
+++ b/photosite.html
@@ -4,6 +4,7 @@
 <head>
     <title>Photo Blog</title>
     <link rel="stylesheet" href="C:\Users\91919\OneDrive\Desktop\html-css\css\site.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@762&display=swap" rel="stylesheet">
 </head>
 
 <body>
