--- a/flex.html
+++ b/flex.html
@@ -10,6 +10,13 @@
 
 <body>
     <h1>Let's play with Flexbox!</h1>
+    <section class="container">
+        <div style="background-color: red;">1</div>
+        <div style="background-color: blue;">2</div>
+        <div style="background-color: green;">3</div>
+        <div style="background-color: yellow;">4</div>
+        <div style="background-color: purple;">5</div>
+    </section>
 </body>
 
 </html>
