--- a/flex.html
+++ b/flex.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox Playground</title>
     <link rel="stylesheet" href="C:\Users\91919\OneDrive\Desktop\html-css\css\flex.css">
 </head>
 
