--- a/flex.html
+++ b/flex.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Let's play with Flexbox!</h1>
     <section class="container">
-        <div style="background-color: #ff6b6b;">1</div>
-        <div style="background-color: #4ecdc4;">2</div>
-        <div style="background-color: #f7b731;">3</div>
-        <div style="background-color: #003949;">4</div>
-        <div style="background-color: #f7b731;">5</div>
+        <div style="background-color: #ff6b6b"></div>
+        <div style="background-color: #4ecdc4"></div>
+        <div style="background-color: #f7b731"></div>
+        <div style="background-color: #003949"></div>
+        <div style="background-color: #f7b731"></div>
     </section>
 </body>
 
