--- a/flex.html
+++ b/flex.html
@@ -14,7 +14,7 @@
         <div style="background-color: #ff6b6b"></div>
         <div style="background-color: #4ecdc4"></div>
         <div style="background-color: #f7b731"></div>
-        <div style="background-color: #003949"></div>
+        <div style="background-color: #ffffff"></div>
         <div style="background-color: #f7b731"></div>
     </section>
 </body>
