--- a/flex.html
+++ b/flex.html
@@ -15,7 +15,7 @@
         <div style="background-color: #4ecdc4"></div>
         <div style="background-color: #f7b731"></div>
         <div style="background-color: #ffffff"></div>
-        <div style="background-color: #f7b731"></div>
+        <div style="background-color: #b89f68"></div>
     </section>
 </body>
 
