--- a/mediaqueries.html
+++ b/mediaqueries.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
+    <link rel="stylesheet" href="C:\Users\91919\OneDrive\Desktop\html-css\css\media.css">
 </head>
 
 <body>
@@ -17,6 +18,7 @@
         </ul>
         <a href="#signup">SignUp </a>
     </nav>
+    <h1>Media Queries</h1>
 </body>
 
 </html>
