--- a/boostrap.html
+++ b/boostrap.html
@@ -17,6 +17,7 @@
             reprehenderit consectetur maiores dignissimos velit magnam quod, doloribus vel doloremque facilis numquam?
             Harum, dolores culpa?</p>
         <button class="btn btn-success">Success</button>
+        <button class="btn btn-outline-warning">Warning!!</button>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
