--- a/boostrap.html
+++ b/boostrap.html
@@ -16,8 +16,9 @@
             est
             reprehenderit consectetur maiores dignissimos velit magnam quod, doloribus vel doloremque facilis numquam?
             Harum, dolores culpa?</p>
-        <button class="btn btn-success btn-lg">Success</button>
-        <button class="btn btn-outline-warning btn-lg">Warning!!</button>
+        <button class="btn btn-outline-success btn-sm">Success</button>
+        <button class="btn btn-outline-warning">Warning!!</button>
+        <button class="btn btn-outline-info btn-lg">INFO</button>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
