--- a/boostrap.html
+++ b/boostrap.html
@@ -11,14 +11,23 @@
 
 <body>
     <div class="container">
-        <h1>Bootstrap Basics</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, asperiores quae vitae, architecto suscipit
-            est
-            reprehenderit consectetur maiores dignissimos velit magnam quod, doloribus vel doloremque facilis numquam?
-            Harum, dolores culpa?</p>
+        <h1 class="display-1">Bootstrap Basics</h1>
+        <h2 class="display-4">Buttons</h2>
         <button class="btn btn-outline-success btn-sm">Success</button>
         <button class="btn btn-outline-warning">Warning!!</button>
         <button class="btn btn-outline-info btn-lg">INFO</button>
+        <h2 class="display-4">Typography</h2>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, asperiores quae vitae,
+            architecto suscipit
+            est
+            reprehenderit consectetur maiores dignissimos velit magnam quod, doloribus vel doloremque facilis numquam?
+            Harum, dolores culpa?</p>
+        <blockquote class="blockquote">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint aliquam, repellat, eveniet animi facere,
+                nisi officia quos dignissimos officiis aperiam aut debitis fugiat sapiente harum asperiores recusandae
+                vitae ipsum iusto.</p>
+            <footer class="blockquote-footer">MR.Lorem Ipsum</footer>
+        </blockquote>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
