--- a/boostrap.html
+++ b/boostrap.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1 class="display-1">Bootstrap Basics</h1>
+        <h1 class="display-1 text-center">Bootstrap Basics</h1>
         <h2 class="display-4">Buttons</h2>
         <button class="btn btn-outline-success btn-sm">Success</button>
         <button class="btn btn-outline-warning">Warning!!</button>
@@ -23,7 +23,8 @@
             reprehenderit consectetur maiores dignissimos velit magnam quod, doloribus vel doloremque facilis numquam?
             Harum, dolores culpa?</p>
         <blockquote class="blockquote">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint aliquam, repellat, eveniet animi facere,
+            <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint aliquam, repellat, eveniet
+                animi facere,
                 nisi officia quos dignissimos officiis aperiam aut debitis fugiat sapiente harum asperiores recusandae
                 vitae ipsum iusto.</p>
             <footer class="blockquote-footer">MR.Lorem Ipsum</footer>
