--- a/boostrap.html
+++ b/boostrap.html
@@ -23,7 +23,8 @@
             reprehenderit consectetur maiores dignissimos velit magnam quod, doloribus vel doloremque facilis numquam?
             Harum, dolores culpa?</p>
         <blockquote class="blockquote">
-            <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint aliquam, repellat, eveniet
+            <p class="mb-0 bg-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint aliquam, repellat,
+                eveniet
                 animi facere,
                 nisi officia quos dignissimos officiis aperiam aut debitis fugiat sapiente harum asperiores recusandae
                 vitae ipsum iusto.</p>
