--- a/boostrap.html
+++ b/boostrap.html
@@ -13,9 +13,9 @@
     <div class="container">
         <h1 class="display-1 text-center">Bootstrap Basics</h1>
         <h2 class="display-4">Buttons</h2>
-        <button class="btn btn-outline-success btn-sm">Success</button>
+        <button class="btn btn-outline-success btn-sm ">Success</button>
         <button class="btn btn-outline-warning">Warning!!</button>
-        <button class="btn btn-outline-info btn-lg">INFO</button>
+        <button class="btn btn-outline-info btn-lg">Notification<span class="badge badge-primary">New</span></button>
         <h2 class="display-4">Typography</h2>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, asperiores quae vitae,
             architecto suscipit
@@ -30,7 +30,13 @@
                 vitae ipsum iusto.</p>
             <footer class="blockquote-footer">MR.Lorem Ipsum</footer>
         </blockquote>
-
+        <h3 class="display-4">Button Groups
+        </h3>
+        <div class="btn-group">
+            <button class="btn btn-warning">one</button>
+            <button class="btn btn-warning">one</button>
+            <button class="btn btn-warning">one</button>
+        </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
