--- a/boostrap.html
+++ b/boostrap.html
@@ -37,6 +37,11 @@
             <button class="btn btn-warning">one</button>
             <button class="btn btn-warning">one</button>
         </div>
+        <h3 class="display-4">Alert</h3>
+        <div class="alert alert-primary">
+            This is a primary alert.
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
