--- a/boostrap.html
+++ b/boostrap.html
@@ -38,8 +38,8 @@
             <button class="btn btn-warning">one</button>
         </div>
         <h3 class="display-4">Alert</h3>
-        <div class="alert alert-primary">
-            This is a primary alert.
+        <div class="alert alert-danger">
+            This is a simple alert.
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
