--- a/boostrap.html
+++ b/boostrap.html
@@ -35,8 +35,8 @@
         </h3>
         <div class="btn-group">
             <button class="btn btn-warning">one</button>
-            <button class="btn btn-warning">one</button>
-            <button class="btn btn-warning">one</button>
+            <button class="btn btn-warning">two</button>
+            <button class="btn btn-warning">three</button>
         </div>
         <h3 class="display-4">Alert</h3>
         <div class="alert alert-danger">
