--- a/boostrap.html
+++ b/boostrap.html
@@ -39,8 +39,12 @@
             <button class="btn btn-warning">three</button>
         </div>
         <h3 class="display-4">Alert</h3>
-        <div class="alert alert-danger">
+        <div class="alert alert-danger alert-dismissible fade show">
+            <h4 class="alert-heading">OH Shit!!!</h4>
             This is a simple alert.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
