--- a/boostrap.html
+++ b/boostrap.html
@@ -39,7 +39,7 @@
             <button class="btn btn-warning">three</button>
         </div>
         <h3 class="display-4">Alert</h3>
-        <div class="alert alert-danger alert-dismissible fade show">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
             <h4 class="alert-heading">OH Shit!!!</h4>
             This is a simple alert.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
