--- a/boostrap.html
+++ b/boostrap.html
@@ -14,7 +14,7 @@
         <h1 class="display-1 text-center">Bootstrap Playground</h1>
         <h2 class="display-4">Buttons</h2>
         <button class="btn btn-outline-success btn-sm ">Success</button>
-        <button class="btn btn-outline-warning">Warning!!</button>
+        <button class="btn btn-warning">Warning!!</button>
         <button class="btn btn-outline-info btn-lg">Notification<span class="badge badge-primary">New</span></button>
         <h2 class="display-4">Typography</h2>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, asperiores quae vitae,
