--- a/udemy practice/test13.html
+++ b/udemy practice/test13.html
@@ -13,11 +13,11 @@
     <div class="container">
         <div class="row">
             <div class="col-4 bg-danger">One Third</div>
-            <div class="col-8 bg-success">Two Thirds</div>
+            <div class="col-8 bg-secondary">Two Thirds</div>
         </div>
         <div class="row">
             <div class="col-3 bg-warning">One Quater</div>
-            <div class="col-6 bg-info">One Half</div>
+            <div class="col-6 bg-primary">One Half</div>
             <div class="col-3 bg-warning">One Quater</div>
         </div>
     </div>
