--- a/gridsystem.html
+++ b/gridsystem.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Bootstrap Grid Exercise</title>
+    <title>Bootstrap Grid System</title>
     <!--INCLUDING BOOTSTRAP-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -22,6 +22,7 @@
             <div class="col-3 bg-warning">One Quater</div>
         </div>
     </div>
+    <h2 class="display-4 text-center">Responsive Grid</h2>
 </body>
 
 </html>
