responsive grid system

--- a/gridsystem.html
+++ b/gridsystem.html
@@ -23,6 +23,17 @@
         </div>
     </div>
     <h2 class="display-4 text-center">Responsive Grid</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique minima corporis
+                quisquam maxime totam explicabo, esse cupiditate, in placeat, nulla voluptatem eligendi voluptates?
+                Nulla
+                obcaecati consequatur quae officia nisi ea.</div>
+            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptas quaerat minima
+                explicabo praesentium delectus beatae, ab possimus neque, optio voluptates veritatis omnis dolores porro
+                magnam assumenda hic? Porro, dolore.</div>
+        </div>
+    </div>
 </body>
 
 </html>
