--- a/gridsystem.html
+++ b/gridsystem.html
@@ -25,11 +25,27 @@
     <h2 class="display-4 text-center">Responsive Grid</h2>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique minima corporis
+            <div class="col-md-6 col-xl-3 bg-primary text-white">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.
+                Similique minima
+                corporis
                 quisquam maxime totam explicabo, esse cupiditate, in placeat, nulla voluptatem eligendi voluptates?
                 Nulla
                 obcaecati consequatur quae officia nisi ea.</div>
-            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptas quaerat minima
+            <div class="col-md-6 col-xl-3 bg-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+                voluptas
+                quaerat minima
+                explicabo praesentium delectus beatae, ab possimus neque, optio voluptates veritatis omnis dolores porro
+                magnam assumenda hic? Porro, dolore.</div>
+            <div class="col-md-6 col-xl-3 bg-dark text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Similique minima
+                corporis
+                quisquam maxime totam explicabo, esse cupiditate, in placeat, nulla voluptatem eligendi voluptates?
+                Nulla
+                obcaecati consequatur quae officia nisi ea.</div>
+            <div class="col-md-6 col-xl-3 bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+                voluptas
+                quaerat minima
                 explicabo praesentium delectus beatae, ab possimus neque, optio voluptates veritatis omnis dolores porro
                 magnam assumenda hic? Porro, dolore.</div>
         </div>
