--- a/gridsystem.html
+++ b/gridsystem.html
@@ -49,7 +49,21 @@
                 explicabo praesentium delectus beatae, ab possimus neque, optio voluptates veritatis omnis dolores porro
                 magnam assumenda hic? Porro, dolore.</div>
         </div>
-    </div>
+        <h2 class="display-4 text-center">Img-Fluid</h2>
+        <div class="row">
+            <div class="col-lg-4">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1761839259946-2d80f8e72e18?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzNXx8fGVufDB8fHx8fA%3D%3D">
+            </div>
+            <div class="col-lg-4">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1770347314659-7fd45b638f87?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzN3x8fGVufDB8fHx8fA%3D%3D">
+            </div>
+            <div class="col-lg-4">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1770297345695-f7ca76dfb04d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzNnx8fGVufDB8fHx8fA%3D%3D">
+            </div>
+        </div>
 </body>
 
 </html>
