--- a/gridsystem.html
+++ b/gridsystem.html
@@ -84,6 +84,17 @@
                     porro
                     magnam assumenda hic? Porro, dolore.</div>
             </div>
+            <h3 class="display-4 text-center">Justify Content</h3>
+            <div class="row border justify-content-center">
+                <div class="col-4 bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dicta,
+                    odio maxime quaerat illum
+                    maiores debitis? Voluptas sed illum, voluptatibus reiciendis, facilis voluptates quia debitis
+                    delectus maiores odio dicta dolorum.</div>
+                <div class="col-4 bg-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dicta, odio
+                    maxime quaerat illum
+                    maiores debitis? Voluptas sed illum, voluptatibus reiciendis, facilis voluptates quia debitis
+                    delectus maiores odio dicta dolorum.</div>
+            </div>
             <h2 class="display-4 text-center">Img-Fluid</h2>
             <div class="row">
                 <div class="col-lg-4">
