--- a/formsbootstrap.html
+++ b/formsbootstrap.html
@@ -10,21 +10,30 @@
 </head>
 
 <body>
-    <form>
-        <div class="form-group">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email">
-            </div>
+    <div class="container">
+        <h1 class="display-4">Forms in Bootstrap</h1>
+        <form>
+            <div>
+                <div class="form-group">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email">
+                </div>
 
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password">
-            </div>
+                <div class="form-group">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="remember">
+                    <label class="form-check-label" for="remember">
+                        Remember Me
+                    </label>
+                </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+        </form>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
